## Process this with automake to create Makefile.in

SUBDIRS = libogg

docdir = $(datadir)/doc/$(PACKAGE)-$(VERSION)

doc_DATA = framing.html index.html oggstream.html ogg-multiplex.html \
	fish_xiph_org.png multiplex1.png packets.png pages.png stream.png \
	vorbisword2.png white-ogg.png white-xifish.png \
	rfc3533.txt rfc5334.txt skeleton.html

EXTRA_DIST = $(doc_DATA)
